--- a/common/views/dash.mustache
+++ b/common/views/dash.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{>head}}
-    <script type="module" src="https://dub01.online.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
+    <script type="module" src="https://10ax.online.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
   </head>
   <body id="samples">
 
@@ -12,13 +12,9 @@
       <div id="doc" class="column auto">
         <div class="doc-overview">
           <h2 class="ui dividing header" data-se="overview-doc-header">
-            Tableau Embedded Dashboard
+            {{! Tableau Embedded Dashboard }}
+            Hello, {{userinfo.name}}!
           </h2>
-          <p>Hello, {{userinfo.name}}. Below is the embedded Tableau Dashboard. We've used the <a href="https://help.tableau.com/current/api/embedding_api/en-us/docs/embedding_api_auth.html">Embedding API v3</a> to embed the content,
-            while SSO happens by <a href="https://help.tableau.com/current/api/embedding_api/en-us/docs/embedding_api_auth.html#pass-the-jwt-to-tableauviz-web-component">passing the JWT access token to the <tableauViz> web component</a>
-             to establish a session for the authenticated user.
-          </p>
-          <p>This route is protected with the <code>oidc.ensureAuthenticated()</code> middleware, which will ensure that this page cannot be accessed until you have authenticated.</p>
         </div>            
         
         <tableau-viz id="tableauViz" src="{{viz_url}}"
