--- a/common/views/dash.mustache
+++ b/common/views/dash.mustache
@@ -12,8 +12,7 @@
       <div id="doc" class="column auto">
         <div class="doc-overview">
           <h2 class="ui dividing header" data-se="overview-doc-header">
-            {{! Tableau Embedded Dashboard }}
-            Hello, {{userinfo.name}}!
+            Hello, {{userinfo.name}!
           </h2>
         </div>            
         
